--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
-- hot reloading with gaearon/babel-plugin-react-transform when functional components are supported
-
-- sourcemaps
 - dist builds
   - pass env=production to get correct react build
   - tree shake with rollup
   - uglify
+
+- LATER:
+  - hot reloading with gaearon/babel-plugin-react-transform
+    - wating on: functional component support
