--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,9 @@
+- add js/scss linting to package.json
+
+- css
+  - multiple scss files
+  - globals
+
 - dist builds
   - pass env=production to get correct react build
   - tree shake with rollup
