--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 - add js/scss linting to package.json
 
-- add testing
+- resolve-url-loader?
 
 - dist builds
   - pass env=production to get correct react build
