--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
-- add js/scss linting to package.json
-- consolidate configs into conf
+- finish splitting out test files
+- split out webpack conf
+- add lint/test watching with chokidar-cli
+- confirm coverage is working
 
 - dist builds
   - pass env=production to get correct react build
