--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
+- scss -> postcss
 - finish splitting out test files
 - split out webpack conf
 - add lint/test watching with chokidar-cli
-- confirm coverage is working
 
 - dist builds
   - pass env=production to get correct react build
