--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,15 @@
-- scss -> postcss
+- scss -> postcss (kirei-css)
+- npm-run-all
 - split out webpack conf
 
 - dist builds
   - pass env=production to get correct react build
-  - tree shake with rollup
   - uglify
 
 - LATER:
+  - make kire-css loader
+  - https://github.com/reactjs/redux/pull/1455/files
+  - tree shake with rollup
   - add lint/test watching with chokidar-cli
   - hot reloading with gaearon/babel-plugin-react-transform
-    - wating on: functional component support
+    - wating on: functional component support?
