--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,13 @@
-- scss -> postcss (kirei-css)
 - npm-run-all
 - split out webpack conf
 
 - dist builds
   - pass env=production to get correct react build
   - uglify
+- add lint/test watching with chokidar-cli
 
 - LATER:
-  - make kire-css loader
+  - make kire-css loader instead of using postcss at all
+    - has to work with imports
   - https://github.com/reactjs/redux/pull/1455/files
   - tree shake with rollup
-  - add lint/test watching with chokidar-cli
-  - hot reloading with gaearon/babel-plugin-react-transform
-    - wating on: functional component support?
